force-app/main/default/objects/Order_logistics__c/Order_logistics__c.object-meta.xml
<CustomObject>
    <label>Order logistics</label>
    <nameField>
        <displayFormat>Ol-{0000}</displayFormat>
        <label>Order_logistics Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order_logistics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>