force-app/main/default/objects/Order_logistics__c/fields/Accommodation__c.field-meta.xml
<CustomField>
    <fullName>Accommodation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Accommodation</label>
    <referenceTo>Accommodation__c</referenceTo>
    <relationshipName>Order_logistics</relationshipName>
    <type>Lookup</type>
</CustomField>