force-app/main/default/objects/Order_logistics__c/fields/Logistics_Booking__c.field-meta.xml
<CustomField>
    <fullName>Logistics_Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Logistics Booking</label>
    <referenceTo>Logistics_Booking__c</referenceTo>
    <relationshipName>Order_logistics</relationshipName>
    <type>Lookup</type>
</CustomField>