force-app/main/default/objects/Order_logistics__c/fields/Meal__c.field-meta.xml
<CustomField>
    <fullName>Meal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Meal</label>
    <referenceTo>Meal__c</referenceTo>
    <relationshipName>Order_logistics</relationshipName>
    <type>Lookup</type>
</CustomField>