force-app/main/default/objects/Order_logistics__c/fields/Room_Type__c.field-meta.xml
<CustomField>
    <fullName>Room_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Room Type</label>
    <referenceTo>Room_Type__c</referenceTo>
    <relationshipLabel>Order_logistics</relationshipLabel>
    <relationshipName>Order_logistics</relationshipName>
    <type>Lookup</type>
</CustomField>