force-app/main/default/objects/Order_logistics__c/fields/Transport__c.field-meta.xml
<CustomField>
    <fullName>Transport__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transport</label>
    <referenceTo>Transport__c</referenceTo>
    <relationshipLabel>Order_logistics</relationshipLabel>
    <relationshipName>Order_logistics</relationshipName>
    <type>Lookup</type>
</CustomField>