force-app/main/default/objects/Order_logistics__c/listViews/NewView.listView-meta.xml
<ListView>
    <fullName>NewView</fullName>
    <columns>NAME</columns>
    <columns>Accommodation__c</columns>
    <columns>Meal__c</columns>
    <columns>Transport__c</columns>
    <filterScope>Mine</filterScope>
    <label>NewView</label>
</ListView>